syntax = "proto3";

option go_package = "api/";

message FetchFilesRequest {
  repeated string tests = 1;
  string pkg = 2;
  string sort = 3;
}

message FileMap {
  map<string, bytes> files = 1;
}

message FetchFilesResponse {
  repeated string tests = 1;
  repeated FileMap files = 2;
}

message CheckoutFilesRequest {
  FileMap files = 1;
}
